chore(mvc): remove EF Core context and migrations

--- a/FrontEnd/DiaryApp/appsettings.json
+++ b/FrontEnd/DiaryApp/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DiaryContext": "Server=(localdb)\\mssqllocaldb;Database=Diary;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
