--- a/FrontEnd/DiaryApp/appsettings.Development.json
+++ b/FrontEnd/DiaryApp/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ApiSettings": {
+    "DiaryApiBaseUrl": "https://localhost:7198/"
   }
 }
