feat(api): configure jwt authentication

--- a/BackEnd/WebDiaryAPI/appsettings.Development.json
+++ b/BackEnd/WebDiaryAPI/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DiaryContext": "Server=(localdb)\\mssqllocaldb;Database=Diary;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Jwt": {
+    "Key": "THIS_IS_A_DEV_SECRET_KEY_CHANGE_LATER",
+    "Issuer": "WebDiaryAPI",
+    "Audience": "DiaryApp",
+    "ExpiresInMinutes": 60
   }
 }
